# AuroraComposer

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  TASKS.md  deep-research-report.md  dev.cmd  start.cmd
crates/aurora-ast/: Cargo.toml
crates/aurora-ast/src/: builder.rs  events.rs  lib.rs  nodes.rs  patch.rs  project.rs  provenance.rs  snapshot.rs  types.rs
crates/aurora-core/: Cargo.toml
crates/aurora-core/src/: config.rs  error.rs  ids.rs  lib.rs  params.rs  progression.rs  summary.rs
crates/aurora-engine/: Cargo.toml
crates/aurora-engine/src/: error.rs  lib.rs  orchestrator.rs  progress.rs
crates/aurora-engine/src/motif/: generator.rs  mod.rs
crates/aurora-engine/src/progression/: chromatic.rs  flow.rs  harmonic_rhythm.rs  jazz.rs  loop_seam.rs  mod.rs  mode.rs  modulation.rs  roman.rs  templates.rs
crates/aurora-engine/src/stages/: bass.rs  bass_generator.rs  chord_voice.rs  common.rs  counterpoint.rs  decoration.rs  drums.rs  emotion_resolver.rs  harmony.rs  harmony_pad.rs  melody.rs  mod.rs  phrase.rs  repair.rs  rhythm.rs  rhythm_patterns.rs  structure.rs  style_resolver.rs  theme.rs  validation.rs  voicing.rs
crates/aurora-engine/tests/: integration.rs
crates/aurora-export/: Cargo.toml
crates/aurora-export/src/: abc.rs  ir.rs  lib.rs  midi.rs  musicxml.rs  pdf.rs  test_fixtures.rs
crates/aurora-export/tests/: midi_sync.rs
crates/aurora-plugin/: Cargo.toml
crates/aurora-plugin/src/: error.rs  host.rs  lib.rs  manifest.rs  traits.rs  types.rs  wasm_loader.rs
crates/aurora-plugin/src/builtin/: ai_stub.rs  classical.rs  jazz.rs  mod.rs  pop.rs
crates/aurora-rules/: Cargo.toml
crates/aurora-rules/src/: constraint.rs  eval_context.rs  lib.rs  melody_nct.rs  rule.rs  scale.rs  scoring.rs  search.rs
crates/aurora-rules/src/rules/: core.rs  counterpoint.rs  counterpoint_ids.txt  form.rs  form_ids.txt  harmony.rs  harmony_ids.txt  helpers.rs  implemented.rs  jazz.rs  jazz_ids.txt  mod.rs  orchestration.rs  orchestration_ids.txt  rhythm.rs  rhythm_ids.txt  voice_leading.rs  voice_leading_ids.txt
decisions/: ADR-001-specification-first.md  ADR-002-vue3-frontend.md  ADR-003-search-algorithm-primary.md  ADR-004-musicxml-primary-export.md  ADR-005-plugin-sandbox-model.md  ADR-006-cbor-project-serialization.md  ADR-007-style-rule-bundle-switch.md  ADR-008-cow-ast-snapshots.md
docs/: README.md
docs/00-overview/: acas-v0.1.md  goals.md  philosophy.md  research-methodology.md  research-roadmap.md  terminology.md  vision.md
docs/01-architecture/: architecture.md  backend.md  frontend.md  module-overview.md  pipeline.md
docs/02-music-model/: ast.md  events.md  ir.md  score.md  timeline.md  voices.md
docs/03-theory/: counterpoint.md  form.md  harmony.md  jazz.md  orchestration.md  rhythm.md  voice-leading.md
docs/04-algorithms/: bass-engine.md  counterpoint-engine.md  decoration-engine.md  drum-engine.md  emotion-engine.md  harmony-engine.md  melody-engine.md  motif-engine.md  phrase-engine.md  repair-engine.md  rhythm-engine.md  structure-engine.md
docs/05-rule-engine/: constraint.md  rule-dsl.md  scoring.md
docs/06-export/: abc.md  midi.md  musicxml.md  pdf.md
docs/07-plugin/: api.md  sdk.md
docs/08-ui/: inspector.md  piano-roll.md  tauri.md  timeline-ui.md  vue.md
docs/09-engineering/: coding-style.md  performance.md  roadmap.md  testing.md
research/: algorithms-research-notes.md  ast-research-notes.md  engineering-research-notes.md  export-research-notes.md  playback.md  plugin-ui-research-notes.md  rule-engine-research-notes.md  theory-research-notes.md
reviews/: architecture-review-v0.1.md  design-freeze-v0.1.md
scripts/: gen_rules.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  projection.rs  state.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: verify-midi-timing.mjs
ui/src/: App.vue  main.ts  style.css  vite-env.d.ts
ui/src/assets/: icons.ts
ui/src/components/: AuroraIcon.vue  EventInspector.vue  HorizontalScrollBar.vue  IconButton.vue  PatternBar.vue  PatternPlaylist.vue  PianoRoll.vue  PlayerPanel.vue  PluginMenu.vue  PluginPanel.vue  ProjectMenu.vue  ResizeHandle.vue  ScoreViewer.vue  ScoreViewport.vue  ScrollPanel.vue  TimelineView.vue  VerticalScrollBar.vue  VoiceSwitcher.vue
ui/src/composables/: useI18n.ts
ui/src/i18n/: messages.ts
ui/src/presets/: generationPresets.ts
ui/src/services/: download.ts  gmInstruments.ts  player.ts  tauri.ts
ui/src/stores/: composition.ts  parameters.ts  patterns.ts  pianoTool.ts  playback.ts  playlist.ts  selection.ts  settings.ts  snapGrid.ts
ui/src/types/: aurora.ts
ui/src/utils/: compositionSummary.ts  format.ts  pianoRoll.ts  seed.ts
