[package]
name = "aurora-plugin"
description = "Aurora Composer plugin host and trait API"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aurora-core = { workspace = true }
aurora-ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
