[package]
name = "aurora-rules"
description = "Aurora Composer rule engine and search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aurora-core = { workspace = true }
aurora-ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

# aurora-ast enabled — search eval uses aurora-ast types via eval_context
